Change package name from "ui" to "syntax" (because it's what it is)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blackboard-bb-ui",
+  "name": "blackboard-bb-syntax",
   "theme": "syntax",
   "version": "0.3.0",
   "private": true,
