--- a/package.json
+++ b/package.json
@@ -10,7 +10,5 @@
   },
   "homepage": "https://github.com/brunobord/atom-blackboard",
   "license": "MIT",
-  "engines": {
-    "atom": ">1.0.0"
-  }
+  "engines": {"atom": ">=1.0.0 <2.0.0"}
 }
