--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blackboard-bb-syntax",
   "theme": "syntax",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "description": "Bruno Bord TextMate Blackboard syntax theme, ported to Atom.",
   "repository": "https://github.com/brunobord/atom-blackboard",
@@ -10,5 +10,7 @@
   },
   "homepage": "https://github.com/brunobord/atom-blackboard",
   "license": "MIT",
-  "engines": {"atom": ">=1.0.0 <2.0.0"}
+  "engines": {
+    "atom": ">=1.0.0 <2.0.0"
+  }
 }
